@@ -15,6 +15,7 @@ Release 1.2 (2011-x)
 	* Calendar now keeps its height when changing between months with
 	  5-6 weeks
 	* Configurable timezone support
+	* Hide time fields when editing/creating an all day event
 
 Release 1.1.1 (2011-09-24)
 	* Fix DB schema. Wasn't properlty updated on sql/schema.sql, which
